--- a/js/package.json
+++ b/js/package.json
@@ -1,22 +1,14 @@
 {
     "name": "@justoverclock/popular-tags",
+    "version": "1.0.6",
     "private": true,
-    "devDependencies": {
-        "@flarum/prettier-config": "^1.0.0",
+    "dependencies": {
         "flarum-webpack-config": "^2.0.0",
-        "prettier": "^2.5.1",
-        "webpack": "^5.65.0",
-        "webpack-cli": "^4.9.1"
+        "webpack": "^5.0.0",
+        "webpack-cli": "^4.0.0"
     },
     "scripts": {
         "dev": "webpack --mode development --watch",
-        "build": "webpack --mode production",
-        "analyze": "cross-env ANALYZER=true yarn run build",
-        "format": "prettier --write src",
-        "format-check": "prettier --check src"
-    },
-    "prettier": "@flarum/prettier-config",
-    "dependencies": {
-        "flarum": "^0.1.0-beta.16"
+        "build": "webpack --mode production"
     }
 }
